# sdk-rust

./: Cargo.toml  README.md
.github/workflows/: ci.yml  publish.yml
src/: client.rs  error.rs  lib.rs  types.rs
tests/: integration_test.rs
