[package]
name = "meshbrow"
version = "0.1.0"
edition = "2021"
description = "Rust SDK for Meshbrow — Managed Browser Fleet for AI Agents"
license = "MIT"
repository = "https://github.com/meshbrow-dev/meshbrow-rust"
homepage = "https://meshbrow.dev"
documentation = "https://docs.rs/meshbrow"
keywords = ["browser", "automation", "ai-agents", "stealth", "cdp"]
categories = ["web-programming::http-client", "api-bindings"]

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tokio = { version = "1", features = ["full"] }
base64 = "0.22"

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
wiremock = "0.6"
